# cigrbench

./: .gitignore  .gitlab-ci.yml  README.md  asv.conf.json  bors.toml  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  setup.cfg
.asv/results/: benchmarks.json
.asv/results/daint-compute-node/: 01c1ad7c-virtualenv-py3.9.json  01e2f5d9-virtualenv-py3.9.json  66ac9b21-virtualenv-py3.9.json  machine.json
.github/workflows/: cigr.yml
benchmarks/: benchmarks.py
graphs/arch-x86_64/branch-main/cpu-Intel® Xeon® E5-2690 v3 @ 2.60GHz (12 cores, 64GB RAM) and NVIDIA® Tesla® P100 16GB/machine-daint-compute-node/num_cpu-1/os-Cray/python-3.9/ram-64GB/: summary.json
graphs/summary/: benchmarks.ComparisonSuite.time_sums.json  benchmarks.MemSuite.mem_list.json  benchmarks.TimeSuite.time_naive.json  benchmarks.TimeSuite.time_numpy.json  benchmarks.TimeSuite.time_std.json
src/package/: module.py
