[tool.poetry]
name = "cigrbench"
version = "0.1.0"
description = "Dummy package for benchmarking"
authors = ["Rico Häuselmann <ricoh@cscs.ch>"]
packages = [{include = "package", from "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
