# This file is mainly used to configure package creation with setuptools.
# Documentation:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
#
# Additionally, it stores settings of other development tools (linters, type checkers, etc..

[metadata]
name = cigrbench
author = Rico Häuselmann
author_email = ricoh@cscs.ch
description = Demonstration for continuous benchmarking
license = gpl3
long_description = file: README.md
long_description_content_type = text/x-md; charset=UTF-8
url = https://gridtools.github.io/cigrbench
project_urls =
    Source Code = https://github.com/GridTools/cigrbench

platforms = Linux, Mac

# From: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
package_dir = 
    =src
include_package_data = True
python_requires = >= 3.8
install_requires =
    numpy>=1.15

[options.packages.find]
where = src
